@@ -8,6 +8,10 @@ USER LEVEL CHANGES
 
 -- New methods `setMonitors` and `setMonitors2` added for MCMC configuraiton objects.  These methods replace the current set of monitors (or monitors2) with the specified variables.
 
+BUG FIXES
+
+-- Fixed a bug in k-fold cross-validation routine (`runCrossValidate`), where the merging of MCMC sampler configurations was done incorrectly.
+
                             CHANGES IN VERSION 0.9.1 (May 2020)
 
 USER LEVEL CHANGES
